Wrap all <wrapper>s in <container>s to ensure they're centered on all email clients

--- a/src/styles/layout/_container.scss
+++ b/src/styles/layout/_container.scss
@@ -1,7 +1,3 @@
-.wide {
-
-}
-
 .narrow {
   .columns.first {
     padding-left: $global-gutter * 2;
